--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 80vh;
   background-color: gray;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
@@ -14,4 +14,9 @@ h1 {
 
 canvas {
   border: 1px solid #000;
+}
+#score {
+  margin-bottom: 20px;
+  font-size: 20px;
+  font-weight: bold;
 }
